[gd_scene load_steps=4 format=3 uid="uid://ba6fubdrtgiaa"]

[ext_resource type="Script" path="res://DropTarget.gd" id="1_61gee"]
[ext_resource type="AudioStream" uid="uid://cpmubidwd0mgc" path="res://sounds/Glyph-001.wav" id="2_qwy8f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nspb5"]
radius = 50.0

[node name="DropTarget" type="Area2D"]
position = Vector2(608, 514)
script = ExtResource("1_61gee")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nspb5")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qwy8f")
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
